improve http provider api spec
