# daemon/openapi.yaml
@@ -17,8 +17,8 @@ servers:
 paths:
   /user:
     post:
-      summary: Get user by username
-      description: Retrieve user information by username
+      summary: Get user by username or UID
+      description: Retrieve user information by username or numeric user ID
       operationId: getUser
       requestBody:
         required: true
@@ -33,8 +33,13 @@ paths:
                       type: string
                       description: Username to lookup
                       example: "alice"
-                  required:
-                    - username
+                    uid:
+                      type: string
+                      description: Numeric user ID to lookup
+                      example: "1000"
+                  oneOf:
+                    - required: [username]
+                    - required: [uid]
       responses:
         "200":
           description: User found
@@ -80,56 +85,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /user_by_uid:
-    post:
-      summary: Get user by UID
-      description: Retrieve user information by numeric user ID
-      operationId: getUserByUID
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              allOf:
-                - $ref: "#/components/schemas/BaseRequest"
-                - type: object
-                  properties:
-                    uid:
-                      type: string
-                      description: Numeric user ID
-                      example: "1000"
-                  required:
-                    - uid
-      responses:
-        "200":
-          description: User found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-        "404":
-          description: User not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
 
   /group:
     post:
-      summary: Get group by name
-      description: Retrieve group information by group name
+      summary: Get group by name or GID
+      description: Retrieve group information by group name or numeric group ID
       operationId: getGroup
       requestBody:
         required: true
@@ -144,8 +104,13 @@ paths:
                       type: string
                       description: Group name to lookup
                       example: "developers"
-                  required:
-                    - groupname
+                    gid:
+                      type: string
+                      description: Numeric group ID to lookup
+                      example: "1000"
+                  oneOf:
+                    - required: [groupname]
+                    - required: [gid]
       responses:
         "200":
           description: Group found
@@ -172,51 +137,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /group_by_gid:
-    post:
-      summary: Get group by GID
-      description: Retrieve group information by numeric group ID
-      operationId: getGroupByGID
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              allOf:
-                - $ref: "#/components/schemas/BaseRequest"
-                - type: object
-                  properties:
-                    gid:
-                      type: string
-                      description: Numeric group ID
-                      example: "1000"
-                  required:
-                    - gid
-      responses:
-        "200":
-          description: Group found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Group"
-        "404":
-          description: Group not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        "400":
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
 
   /keys:
     post:
@@ -336,11 +256,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-  /checksudo:
+  /sudo:
     post:
       summary: Check sudo access
       description: Check if a user has sudo access privileges
-      operationId: checkSudo
+      operationId: sudo
       requestBody:
         required: true
         content:
